scss: fixed upshifted fonts for footer/header

--- a/webroot/scss/inc/config.scss
+++ b/webroot/scss/inc/config.scss
@@ -18,8 +18,10 @@ $font-sec: 		Arial, sans-serif;
 $normal:        400;
 $bold:          700;
 
-$font-upshift:  0.2em; 	// annoying property of helvetica neue is that it is shifted up for no good reason
-						// this upshift value should help using mixins to auto-shift it down where needed
+// annoying property of helvetica neue is that it is shifted up for no good reason
+// this upshift value should help using mixins to auto-shift it down where needed
+// this was measured with a 14 px font
+$font-upshift:  (2.5 / 14) + em;
 
 // colors
 $color-pri: #d41046;	// pixel red
