--- a/webroot/scss/inc/header.scss
+++ b/webroot/scss/inc/header.scss
@@ -77,6 +77,7 @@ nav.main {
 			padding-left: $margin-def;
 			padding-right: $margin-def;
 			line-height: $heightBottom;
+			margin-top: $font-upshift;
 		}
 
 		&.active {
